# wij

./: .gitignore  Cargo.toml
core/: lib.wij
core/fmt/: lib.wij
core/mem/: alloc.wij
core/strings/: lib.wij  util.wij
examples/: arrays.wij  basic.wij  basic_program.wij  if_else.wij  mem_test.wij  simple_let.wij  strings.wij
examples/v2/: v2.wij
examples/v2/utils/: math.wij
wij_codegen/: Cargo.toml
wij_codegen/src/: lib.rs
wij_codegen/src/cranelift/: mod.rs
wij_codegen/src/llvm/: mod.rs
wij_core/: Cargo.toml
wij_core/src/: ast.rs  compiler.rs  comptime.rs  lex.rs  lib.rs  mir.rs  parse.rs
wij_core/src/ast/: macros.rs  mod.rs  tests.rs  typed.rs  types.rs  use_analysis.rs
wij_core/src/lex/: tests.rs
wij_core/src/mir/: dot.rs  linker.rs  ssa.rs
wij_core/src/parse/: lex.rs  macros.rs  mod.rs  tests.rs
wij_intrinsics/: README.md  intrinsics.c  intrinsics.h  test.rs
wij_intrinsics/gc/: Cargo.toml
wij_intrinsics/gc/src/: gc.rs  lib.rs  page_alloc.rs
wijc/: Cargo.toml
wijc/src/: main.rs
