[package]
name = "wij_codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
cranelift = "0.120.0"
cranelift-module = "0.120.0"
cranelift-native = "0.120.0"
cranelift-object = "0.120.0"
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
melior = "0.24.0"
wij_core = { path = "../wij_core" }
